# CUDA_Code

./: README.md
Assignment1/Code/: CMakeLists.txt  main.cu
Assignment1/Doc/: GPU Computing Assignment 1.md
Assignment2/Code/: .cproject  CMakeLists.txt  kernel.hpp  kernelGaussian.cu  kernelGaussian.hpp  kernelGaussianSharedMemory.cu  kernelGaussianSharedMemory.hpp  main.cu  testKSM.cu
Assignment2/Doc/: Doc.dvi  Doc.tex
